--- a/ranking/templates/ranking/detail.html
+++ b/ranking/templates/ranking/detail.html
@@ -15,40 +15,46 @@
     <section>
       <h1>{{ bandeco.name }}</h1>
       <p>{{ bandeco.description }}</p>
-      <p class="endereco">{{bandeco.endereco}}</p>
-      <div class="stars_score">{% if bandeco_data.average_nota >= 0.5 %}
-              <span class="fa fa-star checked"></span>
-            {% else %}
-              <span class="fa fa-star"></span>
-            {% endif %}
-            {% if bandeco_data.average_nota >= 1.5 %}
-              <span class="fa fa-star checked"></span>
-            {% else %}
-              <span class="fa fa-star"></span>
-            {% endif %}
-            {% if bandeco_data.average_nota >= 2.5 %}
-              <span class="fa fa-star checked"></span>
-            {% else %}
-              <span class="fa fa-star"></span>
-            {% endif %}
-            {% if bandeco_data.average_nota >= 3.5 %}
-              <span class="fa fa-star checked"></span>
-            {% else %}
-              <span class="fa fa-star"></span>
-            {% endif %}
-            {% if bandeco_data.average_nota >= 4.5 %}
-              <span class="fa fa-star checked"></span>
-            {% else %}
-              <span class="fa fa-star"></span>
-            {% endif %}</div>
-      <p><img class="icon" src="{% static 'images/telefones.png' %}" alt="telefone"/>Telefone: {{ bandeco.contato }}</p>
-      <p><img class="icon" src="{% static 'images/relogio.png' %}" alt="relogio"/>Horário de funcionamento: {{ bandeco.horarios }}</p>
+      <p class="endereco">{{ bandeco.endereco }}</p>
+      <div class="stars_score">
+        {% if bandeco_data.average_nota >= 0.5 %}
+          <span class="fa fa-star checked"></span>
+        {% else %}
+          <span class="fa fa-star"></span>
+        {% endif %}
+        {% if bandeco_data.average_nota >= 1.5 %}
+          <span class="fa fa-star checked"></span>
+        {% else %}
+          <span class="fa fa-star"></span>
+        {% endif %}
+        {% if bandeco_data.average_nota >= 2.5 %}
+          <span class="fa fa-star checked"></span>
+        {% else %}
+          <span class="fa fa-star"></span>
+        {% endif %}
+        {% if bandeco_data.average_nota >= 3.5 %}
+          <span class="fa fa-star checked"></span>
+        {% else %}
+          <span class="fa fa-star"></span>
+        {% endif %}
+        {% if bandeco_data.average_nota >= 4.5 %}
+          <span class="fa fa-star checked"></span>
+        {% else %}
+          <span class="fa fa-star"></span>
+        {% endif %}
+      </div>
+      <p>
+        <img class="icon" src="{% static 'images/telefones.png' %}" alt="telefone" />Telefone: {{ bandeco.contato }}
+      </p>
+      <p>
+        <img class="icon" src="{% static 'images/relogio.png' %}" alt="relogio" />Horário de funcionamento: {{ bandeco.horarios }}
+      </p>
       <article class="detail_article">
-      <img class="detail_img" src="{{ bandeco.img_url }}" alt="Imagem de {{ bandeco.name }}" />
+        <img class="detail_img" src="{{ bandeco.img_url }}" alt="Imagem de {{ bandeco.name }}" />
         <div class="menus">
           <div>
-            <p>Menu almoço: 
-              {% if bandeco_data.lunch_nota >= 0.5 %}
+            <p>
+              Menu almoço:{% if bandeco_data.lunch_nota >= 0.5 %}
                 <span class="fa fa-star checked"></span>
               {% else %}
                 <span class="fa fa-star"></span>
@@ -74,7 +80,7 @@
                 <span class="fa fa-star"></span>
               {% endif %}
             </p>
-          
+
             <ul class="menu_list">
               {% for item in bandeco_data.lunch_menu %}
                 <li>{{ item }}</li>
@@ -83,8 +89,7 @@
           </div>
           <div>
             <p>
-              Menu jantar: 
-              {% if bandeco_data.dinner_nota >= 0.5 %}
+              Menu jantar:{% if bandeco_data.dinner_nota >= 0.5 %}
                 <span class="fa fa-star checked"></span>
               {% else %}
                 <span class="fa fa-star"></span>
@@ -118,22 +123,20 @@
           </div>
         </div>
       </article>
-      <hr class="line">
+      <hr class="line" />
     </section>
     <section>
       <h2>Comentários</h2>
-        <li>
-          <a class="comment_button" href="{% url 'comment' bandeco.id %}">Comentar +</a>
-        </li>
+      <li>
+        <a class="comment_button" href="{% url 'comment' bandeco.id %}">Comentar +</a>
+      </li>
       <ul class="ul_comment">
-        
         {% if bandeco.comentario_set.all %}
           {% for comentario in bandeco.comentario_set.all %}
+            {% if comentario.text %}
               <figure class="comment_head">
-                <figcaption >
-                  
-                  <strong>{{ comentario.author }}</strong> ({{ comentario.date|date:'d/m/Y' }})
-                  <div class="stars_score">
+                <figcaption>
+                  <strong>{{ comentario.author }}</strong> ({{ comentario.date|date:'d/m/Y' }})<div class="stars_score">
                     {% if comentario.nota >= 0.5 %}
                       <span class="fa fa-star checked"></span>
                     {% else %}
@@ -160,24 +163,23 @@
                       <span class="fa fa-star"></span>
                     {% endif %}
                   </div>
-                  
                 </figcaption>
-                {% if comentario.text %}
                 <blockquote>- "{{ comentario.text }}"</blockquote>
-              <div class="comment_buttons_align">
-              {% if user.is_authenticated and user.username == comentario.author.username %}
-                <a class="comment_button" href="{% url 'comment_update' comentario.id %}">Editar</a>
-              {% endif %}
-              
-              {% if user.is_authenticated and user_belongs_to_moderators or user.username == comentario.author.username %}
-                  <button class="delete_button" onclick="confirmDelete('{{ comentario.id }}')">Apagar<form method="post" action="{% url 'detail' bandeco.id %}" class="delete-comment-form -comentario-{{ comentario.id }}"></form></button>
-                    {% csrf_token %}
-                    <input type="hidden" name="delete_comment_id" value="{{ comentario.id }}" />
-                  </form>
-              {% endif %}
-              </div>
+                <div class="comment_buttons_align">
+                  {% if user.is_authenticated and user.username == comentario.author.username %}
+                    <a class="comment_button" href="{% url 'comment_update' comentario.id %}">Editar</a>
+                  {% endif %}
+
+                  {% if user.is_authenticated and user_belongs_to_moderators or user.username == comentario.author.username %}
+                    <button class="delete_button" onclick="confirmDelete('{{ comentario.id }}')">Apagar</button>
+                    <form method="post" action="{% url 'detail' bandeco.id %}" class="delete-comment-form -comentario-{{ comentario.id }}">
+                      {% csrf_token %}
+                      <input type="hidden" name="delete_comment_id" value="{{ comentario.id }}" />
+                    </form>
+                  {% endif %}
+                </div>
+              </figure>
             {% endif %}
-          </figure>
           {% endfor %}
         {% else %}
           <h6>Ainda não existe nenhum comentário para o bandeco.</h6>
