--- a/static/style.css
+++ b/static/style.css
@@ -31,17 +31,6 @@ main{
   flex-grow: 1;
 }
 
-figcaption{
-  margin-top: 1rem;
-  margin-left: 0.5rem;
-}
-
-blockquote{
-  margin-top: 1rem;
-  margin-left: 0.5rem;
-  margin-right: 0.5rem;
-}
-
 li{
   list-style-type: none;
 }
@@ -99,6 +88,9 @@ hr.line{
 }
 
 .comment_head{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
   margin-top: 2rem;
   width: 22rem;
   text-align: justify;
@@ -108,7 +100,6 @@ hr.line{
 
 .comment_button {
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
   font-size: 1.6rem;
@@ -119,7 +110,6 @@ hr.line{
   background-color: #0cf;
   color: white;
   position:relative;
-  margin-bottom: 1rem;
 }
 
 .delete_button{
@@ -142,9 +132,9 @@ hr.line{
 
 .comment_buttons_align{
   display: flex;
-  flex-direction: row; 
-  justify-content: space-around;
-  margin-top: 0.5rem;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
 }
 
 .bandeco_card {
@@ -339,9 +329,6 @@ nav li:nth-child(6n + 4) a:hover:before {
 
 .main-footer {
   display: flex;
-  position: fixed ;
-  bottom: 0;
-  left: 50%;
   justify-content: center;
   align-items: center;
   font-weight: 400;
@@ -464,8 +451,11 @@ form li{
 }
 
 .delete-comment-form {
-  border: none;
-  margin: 0;
+  display: none;
+}
+
+.comment_head {
+  padding: 1rem;
 }
 
 .starts_score{
