Conserta erro de merge

--- a/static/style.css
+++ b/static/style.css
@@ -86,7 +86,7 @@ hr.line{
   display: flex;
   flex-direction: column;
   justify-content:space-between;
-  align-items: center;
+  align-items: left;
   margin-left: 1rem;
 }
 
