--- a/ranking/templates/ranking/index.html
+++ b/ranking/templates/ranking/index.html
@@ -16,10 +16,8 @@
       <ul class="bandecos-card">
         {% for current_bandeco in bandeco_data %}
           <li class="card">
-            <a href="{% url 'detail' current_bandeco.bandeco.id %}" class="bandeco-image">
-              <img src="{{ current_bandeco.bandeco.img_url }}" alt="Imagem de {{ current_bandeco.bandeco.name }}" />
-            </a>
-            
+            <a href="{% url 'detail' current_bandeco.bandeco.id %}" class="bandeco-image"><img src="{{ current_bandeco.bandeco.img_url }}" alt="Imagem de {{ current_bandeco.bandeco.name }}" /></a>
+
             <div class="bandeco-info">
               <h2>{{ current_bandeco.bandeco.name }}</h2>
               <p>{{ current_bandeco.bandeco.endereco }}</p>
@@ -51,6 +49,11 @@
               {% else %}
                 <span class="fa fa-star"></span>
               {% endif %}
+              {% if current_bandeco.average_nota %}
+                <span class="average_nota">{{ current_bandeco.average_nota|floatformat:1 }}/5,0</span>
+              {% else %}
+                <span class="average_nota">0,0/5,0</span>
+              {% endif %}
             </div>
 
             <div class="menu-info">
@@ -61,7 +64,6 @@
                 {% endfor %}
               </ul>
             </div>
-
           </li>
         {% endfor %}
       </ul>
