--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -6,11 +6,26 @@ Criar Usuário
 
 {% block content %}
 
+<section>
 <form method="post">
     <h1 class="login_h1">Criar Usuário</h1>
     {% csrf_token %}
     {{ form.as_p }}
+    
     <button type="submit" class="signup_button">Criar</button>
 </form>
+
+    
+{% if form.errors %}
+<div class="error">
+    <p>Sua senha não pode ser muito parecida com o resto das suas informações pessoais.</p>
+    <p>Sua senha precisa conter pelo menos 8 caracteres.</p>
+    <p>Sua senha não pode ser uma senha comumente utilizada.</p>
+    <p>Sua senha não pode ser inteiramente numérica.</p>    
+</div>
+{% endif %}
+    
+
+</section>
 
 {% endblock content %} 
