--- a/static/style.css
+++ b/static/style.css
@@ -485,3 +485,14 @@ form li{
 .starts_score{
   margin-top: 0.7rem;
 }
+
+.error{
+  display: flex;
+  flex-direction: column;
+  color: red;
+  font-size: 1.5rem;
+  margin-top: 1rem;
+  justify-content: center;
+  align-items: center;
+  text-align: justify;
+}
