--- a/ranking/templates/ranking/detail.html
+++ b/ranking/templates/ranking/detail.html
@@ -142,7 +142,7 @@
     <section>
       <h2>Comentários</h2>
       <li>
-        <a class="comment_button" href="{% url 'comment' bandeco.id %}">Comentar +</a>
+        <a class="comment_button" href="{% url 'comment' bandeco.id %}">Avaliar +</a>
       </li>
       <ul class="ul_comment">
         {% if bandeco.comentario_set.all %}
