--- a/static/style.css
+++ b/static/style.css
@@ -166,6 +166,10 @@ hr.line{
 .card .info-container {
   display: flex;
   margin-left: 1rem;
+  flex-wrap: wrap;
+  width: 100%;
+  justify-content: space-between;
+  gap: 1rem;
 }
 
 .card h2 {
@@ -182,9 +186,14 @@ hr.line{
 }
 
 .card .bandeco-info{
-  width: 25rem;
+  width: 50%;
+  min-width: 14.7rem;
   flex-wrap: wrap;
-  margin-right: 3rem;
+}
+
+.card .menu-info{
+  width: 45%;
+  flex-wrap: wrap;
 }
 
 .card img:hover {
@@ -192,21 +201,22 @@ hr.line{
 }
 
 .main-logo {
-  width: 30rem;
+  width: 22vw;
 }
 
 .main-header {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   padding: 0.5rem 1rem;
   margin-left: auto;
   margin-right: auto;
+  width: 97%;
 }
 
 .main-nav {
   display: flex;
-  justify-content: space-around;
+  gap: 1rem;
   align-items: center;
   position: relative;
 }
@@ -218,7 +228,7 @@ nav li {
 nav li a {
   color: #333;
   text-decoration: none;
-  font-size: 3.5rem;
+  font-size: 2.6vw;
   padding: 0.5rem 0.2rem;
   display: inline-flex;
   font-weight: 700;
@@ -236,12 +246,12 @@ nav li a:before {
   content: "";
   position: absolute;
   top: 50%;
-  left: 40%;
+  left: 50%;
   transform: translate(-50%, -50%);
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 7rem;
+  font-size: 5.12vw;
   color: rgba(0, 204, 255, 0.3);
   z-index: -1;
   opacity: 0;
@@ -283,11 +293,11 @@ nav li:nth-child(6n + 4) a:hover:before {
   display: inline-flex;
   align-items: center;
   font-weight: 700;
-  margin-right: 1.5rem;
 }
 
 .main-login {
   display: flex;
+  gap: 1rem;
   align-items: center;
 }
 
@@ -295,17 +305,16 @@ nav li:nth-child(6n + 4) a:hover:before {
   display: inline-flex;
   align-items: center;
   font-weight: 500;
-  margin-right: 1.5rem;
 }
 
 .main-button {
   display: inline-block;
-  padding: 1.1rem 1.8rem;
-  border-radius: 10rem;
+  padding: 0.8vw 1.32vw;
+  border-radius: 7.32vw;
   color: #fff;
   text-transform: uppercase;
-  font-size: 1.7rem;
-  letter-spacing: 0.15rem;
+  font-size: 1.25vw;
+  letter-spacing: 0.11vw;
   transition: all 0.3s;
   position: relative;
   overflow: hidden;
@@ -320,7 +329,7 @@ nav li:nth-child(6n + 4) a:hover:before {
   width: 100%;
   height: 100%;
   background-color: #0cf;
-  border-radius: 10rem;
+  border-radius: 7.32vw;
   z-index: -2;
 }
 
@@ -333,7 +342,7 @@ nav li:nth-child(6n + 4) a:hover:before {
   height: 100%;
   background-color: #008fb3;
   transition: all 0.3s;
-  border-radius: 10rem;
+  border-radius: 7.32vw;
   z-index: -1;
 }
 
@@ -485,4 +494,23 @@ form li{
 }
 .average_nota {
   margin-left: 1rem;
+}
+
+@media only screen and (max-width:850px){
+  :root {
+    font-size: 9px;
+  }
+}
+
+@media only screen and (max-width:653px){
+  .card .bandeco-info{
+    width: 100%;
+    min-width: 14.7rem;
+    flex-wrap: wrap;
+  }
+  
+  .card .menu-info{
+    width: 100%;
+    flex-wrap: wrap;
+  }
 }
