--- a/ranking/templates/ranking/detail.html
+++ b/ranking/templates/ranking/detail.html
@@ -57,39 +57,41 @@
         <img class="detail_img" src="{{ bandeco.img_url }}" alt="Imagem de {{ bandeco.name }}" />
         <div class="menus">
           <div>
-            <p>
-              Menu almoço:{% if bandeco_data.lunch_nota >= 0.5 %}
-                <span class="fa fa-star checked"></span>
-              {% else %}
-                <span class="fa fa-star"></span>
-              {% endif %}
-              {% if bandeco_data.lunch_nota >= 1.5 %}
-                <span class="fa fa-star checked"></span>
-              {% else %}
-                <span class="fa fa-star"></span>
-              {% endif %}
-              {% if bandeco_data.lunch_nota >= 2.5 %}
-                <span class="fa fa-star checked"></span>
-              {% else %}
-                <span class="fa fa-star"></span>
-              {% endif %}
-              {% if bandeco_data.lunch_nota >= 3.5 %}
-                <span class="fa fa-star checked"></span>
-              {% else %}
-                <span class="fa fa-star"></span>
-              {% endif %}
-              {% if bandeco_data.lunch_nota >= 4.5 %}
-                <span class="fa fa-star checked"></span>
-              {% else %}
-                <span class="fa fa-star"></span>
-              {% endif %}
-              {% if bandeco_data.lunch_nota %}
-                <span class="average_nota">{{ bandeco_data.lunch_nota|floatformat:1 }}/5,0</span>
-              {% else %}
-                <span class="average_nota">0,0/5,0</span>
-              {% endif %}
-            </p>
-
+            <div class="first-line">
+              <p>Menu almoço:</p>
+              <div class="stars_score">
+                {% if bandeco_data.lunch_nota >= 0.5 %}
+                  <span class="fa fa-star checked"></span>
+                {% else %}
+                  <span class="fa fa-star"></span>
+                {% endif %}
+                {% if bandeco_data.lunch_nota >= 1.5 %}
+                  <span class="fa fa-star checked"></span>
+                {% else %}
+                  <span class="fa fa-star"></span>
+                {% endif %}
+                {% if bandeco_data.lunch_nota >= 2.5 %}
+                  <span class="fa fa-star checked"></span>
+                {% else %}
+                  <span class="fa fa-star"></span>
+                {% endif %}
+                {% if bandeco_data.lunch_nota >= 3.5 %}
+                  <span class="fa fa-star checked"></span>
+                {% else %}
+                  <span class="fa fa-star"></span>
+                {% endif %}
+                {% if bandeco_data.lunch_nota >= 4.5 %}
+                  <span class="fa fa-star checked"></span>
+                {% else %}
+                  <span class="fa fa-star"></span>
+                {% endif %}
+                {% if bandeco_data.lunch_nota %}
+                  <span class="average_nota">{{ bandeco_data.lunch_nota|floatformat:1 }}/5,0</span>
+                {% else %}
+                  <span class="average_nota">0,0/5,0</span>
+                {% endif %}
+              </div>
+            </div>
             <ul class="menu_list">
               {% for item in bandeco_data.lunch_menu %}
                 <li>{{ item }}</li>
@@ -97,38 +99,41 @@
             </ul>
           </div>
           <div>
-            <p>
-              Menu jantar:{% if bandeco_data.dinner_nota >= 0.5 %}
-                <span class="fa fa-star checked"></span>
-              {% else %}
-                <span class="fa fa-star"></span>
-              {% endif %}
-              {% if bandeco_data.dinner_nota >= 1.5 %}
-                <span class="fa fa-star checked"></span>
-              {% else %}
-                <span class="fa fa-star"></span>
-              {% endif %}
-              {% if bandeco_data.dinner_nota >= 2.5 %}
-                <span class="fa fa-star checked"></span>
-              {% else %}
-                <span class="fa fa-star"></span>
-              {% endif %}
-              {% if bandeco_data.dinner_nota >= 3.5 %}
-                <span class="fa fa-star checked"></span>
-              {% else %}
-                <span class="fa fa-star"></span>
-              {% endif %}
-              {% if bandeco_data.dinner_nota >= 4.5 %}
-                <span class="fa fa-star checked"></span>
-              {% else %}
-                <span class="fa fa-star"></span>
-              {% endif %}
-              {% if bandeco_data.dinner_nota %}
-                <span class="average_nota">{{ bandeco_data.dinner_nota|floatformat:1 }}/5,0</span>
-              {% else %}
-                <span class="average_nota">0,0/5,0</span>
-              {% endif %}
-            </p>
+            <div class="first-line">
+              <p>Menu jantar:</p>
+              <div class="stars_score">
+                {% if bandeco_data.dinner_nota >= 0.5 %}
+                  <span class="fa fa-star checked"></span>
+                {% else %}
+                  <span class="fa fa-star"></span>
+                {% endif %}
+                {% if bandeco_data.dinner_nota >= 1.5 %}
+                  <span class="fa fa-star checked"></span>
+                {% else %}
+                  <span class="fa fa-star"></span>
+                {% endif %}
+                {% if bandeco_data.dinner_nota >= 2.5 %}
+                  <span class="fa fa-star checked"></span>
+                {% else %}
+                  <span class="fa fa-star"></span>
+                {% endif %}
+                {% if bandeco_data.dinner_nota >= 3.5 %}
+                  <span class="fa fa-star checked"></span>
+                {% else %}
+                  <span class="fa fa-star"></span>
+                {% endif %}
+                {% if bandeco_data.dinner_nota >= 4.5 %}
+                  <span class="fa fa-star checked"></span>
+                {% else %}
+                  <span class="fa fa-star"></span>
+                {% endif %}
+                {% if bandeco_data.dinner_nota %}
+                  <span class="average_nota">{{ bandeco_data.dinner_nota|floatformat:1 }}/5,0</span>
+                {% else %}
+                  <span class="average_nota">0,0/5,0</span>
+                {% endif %}
+              </div>
+            </div>
             <ul class="menu_list">
               {% for item in bandeco_data.dinner_menu %}
                 <li>{{ item }}</li>
