--- a/ranking/templates/ranking/comment_update.html
+++ b/ranking/templates/ranking/comment_update.html
@@ -3,13 +3,11 @@
   Editar Comentário
 {% endblock %}
 {% block content %}
-  <main>
-    <h2>Editar comentário no Bandeco {{ bandeco.name }}</h2>
-    <form method="POST" action="{% url 'comment_update' comentario.id %}">
-      {% csrf_token %}
-      {{ form.as_p }}
-      <a href="{% url 'detail' bandeco.id %} ">Cancelar</a>
-      <button type="submit">Editar Comentário</button>
-    </form>
-  </main>
+  <form method="POST" action="{% url 'comment_update' comentario.id %}">
+    <h2 class="login_h1">Editar Comentário no Bandeco {{ bandeco.name }}</h2>
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit" class="login_signin_button -second">Editar Comentário</button>
+    <a href="{% url 'detail' bandeco.id %}" class="login_button">Cancelar</a>
+  </form>
 {% endblock %}
