--- a/static/style.css
+++ b/static/style.css
@@ -494,10 +494,6 @@ form li{
   padding: 1rem;
 }
 
-.starts_score{
-  margin-top: 0.7rem;
-}
-
 .error{
   display: flex;
   flex-direction: column;
@@ -538,7 +534,7 @@ form li{
   }
 }
 
-@media only screen and (max-width:653px){
+@media only screen and (max-width:655px){
   .card .bandeco-info{
     width: 100%;
     min-width: 14.7rem;
@@ -549,4 +545,27 @@ form li{
     width: 100%;
     flex-wrap: wrap;
   }
+}
+
+.progress-bar {
+  display: inline-block;
+  background-color: black;
+  height: 1.5rem;
+  width: calc(1.7*5rem);
+  mask-image: url("./images/stars.png");
+  mask-size: 100% 100%;
+}
+
+.progress {
+  background-color: orange;
+  height: 1.5rem;
+}
+
+.average-nota-container {
+  display: flex;
+  align-items: center;
+}
+
+.average-nota-container > span {
+  margin-top: 0.04rem;
 }
